--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+html{
+    background: url('./images/background.jpg') no-repeat center center fixed;
+    background-size: cover;
+}
+
 input:focus:valid{
     background-color: rgb(155, 229, 155);
 }
