--- a/style.css
+++ b/style.css
@@ -6,12 +6,23 @@ html{
 body{
     margin: 0;
     display: flex;
+    flex-direction: row-reverse;
 }
 
 form{
     background-color: white;
     height: 100vh;
-    max-width: 50vh;
+    width: 50vw;
+    padding-left: 10px;
+}
+
+input, label{
+    display: block;
+}
+
+form div:nth-child(even){
+    float: left;
+    margin-right: 5px;
 }
 
 input:focus:valid{
