--- a/style.css
+++ b/style.css
@@ -1,6 +1,15 @@
+@font-face {
+    font-family: "meromSans";
+    src: url("./fonts/meromsans-regular-webfont.woff2") format("woff2"), url("./fonts/meromsans-regular-webfont.woff")
+        format("woff");
+    font-weight: normal;
+    font-style: normal;
+}
+
 html{
     background: url('./images/background.jpg') no-repeat center center fixed;
     background-size: cover;
+    font-family: 'meromSans';
 }
 
 body{
@@ -32,9 +41,14 @@ div.leftContainer{
 }
 
 div.logoContainer{
+    font-size: 2rem;
+    font-weight: bold;
+}
+
+div.logoContainer{
     background-color: rgba(0, 0, 0, 0.492);
     margin-top: 20vh;
-    height: 2rem;
+    height: 2em;
     color: white;
     display: flex;
     justify-content: center;
@@ -53,7 +67,7 @@ footer{
     background-color: rgb(40, 40, 87);
     margin-top: auto;
     width: 50vw;
-    height: 1rem;
+    height: 2em;
     white-space: pre;
     align-self: flex-end;
     display: flex;
