--- a/style.css
+++ b/style.css
@@ -66,6 +66,13 @@ button{
     font-size: 1rem;
 }
 
+div.rightFooter{
+    background-color: rgb(40, 40, 87);
+    height: 2em;
+    display: flex;
+    justify-content: center;
+}
+
 div.leftContainer{
     width: 50vw;
     display: flex;
